Fri Aug 13 15:54:21 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: Removed no-longer-used Btree::erase and
	  QuartzTable::erase methods.

Fri Aug 13 15:37:15 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/quartz_database.cc:
	  Changed Btree::create() to remove any pre-existing alternate base
	  file, so we no longer need to call Btree::erase before
	  Btree::create.

Fri Aug 13 15:37:15 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Updated with changes since last release.

Fri Aug 13 15:36:04 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_posdb.cc,tests/quartztest.cc: Reworked quartztest's
	  positionlist1 into a generic api test as apitest's poslist3.

Thu Aug 12 16:26:42 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_table.cc,backends/quartz/quartz_table.h,
	  bin/quartzcheck.cc,bin/quartzdump.cc: QuartzCursor now has a
	  Bcursor member, rather than an AutoPtr<Bcursor> member.

Thu Aug 12 14:13:37 BST 2004  Olly Betts <olly@survex.com>

	* tests/btreetest.cc: Fixed up in line with the recent refactoring.

Thu Aug 12 13:23:31 BST 2004  Olly Betts <olly@survex.com>

	* m4/xapian.m4: XO_LIB_XAPIAN now AC_SUBSTs XAPIAN_VERSION.

Thu Aug 12 13:21:36 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,tests/quartztest.cc: Refactored, replacing
	  Quartz*Manager with Quartz*Table.

Thu Aug 12 02:00:58 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/: Merged QuartzTableManager into QuartzDatabase.

Wed Aug 11 23:40:34 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,backends/quartz/quartz_database.h:
	  Eliminated buffered_tables member of QuartzWritableDatabase.
 
Wed Aug 11 21:26:35 BST 2004  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc,
	  backends/quartz/quartz_database.cc,backends/quartz/quartz_database.h,
	  docs/todo.xml: WritableDatabase::replace_document can now be used