@@ -1,3 +1,13 @@
+Fri Aug 13 17:54:53 BST 2004  Olly Betts <olly@survex.com>
+
+	* backends/quartz/quartz_database.cc,
+	  backends/quartz/quartz_database.h: Added tunable flush thresholds
+	  - set XAPIAN_FLUSH_THRESHOLD=5000 to flush every 5000 documents
+	  or XAPIAN_FLUSH_THRESHOLD_LENGTH=1000000 to flush every 1000000
+	  total change in document length.  Set both to flush whichever is
+	  reached first.  Set neither and the default is to flush every
+	  1000 documents as before.
+
 Fri Aug 13 15:54:21 BST 2004  Olly Betts <olly@survex.com>
 
 	* backends/quartz/: Removed no-longer-used Btree::erase and
